# digi-inno-road-prod

./: README.md  Sandpit_BERT_for_MultipleChoice.ipynb  environment.yml  pyproject.toml  x_accessing_sourcecode_on_colab.ipynb
analysis/: 1_0-dataset-characterisation.ipynb  1_2-firm-size-analysis.ipynb  1_InitialAnalysis.ipynb  2_Distributions_Correlations.ipynb  3_Linear_Model.ipynb  4_Text_Mining.ipynb  5_Semi-automated_Text_Analysis.ipynb  5_Text_Analysis.ipynb  6_BERT_approach.ipynb  Analyse_BART_DRS_predictions.ipynb  Analyse_BART_zero_shot_results.ipynb  BART_ZeroShot_DRS_classification.ipynb  BART_for_ZeroShotClassification.ipynb  DataCharacterisationForPaper.ipynb  Fine_tune_BERT.ipynb  NoGrantsData.ipynb  PackageVersions.ipynb  ProcessQuestionsSeparatelyThenAggregate.ipynb  README.md  Sandpit_BERT_for_MultipleChoice.ipynb  Sandpit_BERT_for_QuestionAnswering.ipynb  Template.ipynb  x_roadmaps_data_wrangling.ipynb
decisions/: 1_use_Google_drive  2_data_cleaning  3_concatenate_responses_before_chunking.md  README.md
docs/: auth_setup.md  env_setup.md
docs/Images/: .$ThematicAnalysis_Workflow.drawio.bkp  ThematicAnalysis_Workflow.drawio
innoprod/: digital_readiness_score.py  env_tools.py  gdrive_auth.py  path_tools.py  plotting_tools.py  predictions_tools.py  random_tools.py  sheet_tools.py  training_run_manager.py
innoprod/text_analysis/: bert_multiple_choice_wrapper.py  chunking_tools.py  (+5 more)
scripts/: install_windowsml.py
secrets/: README.md
tests/: pdtestcase.py  test_env_tools.py  test_path_tools.py  test_random_tools.py  test_training_run_manager.py
(+11 files in other folders)
